...
    return Builder(
      builder: (context) {
        return ValueListenableBuilder<int>(
          valueListenable: widget.viewModel.selectedIndex,
          builder: (BuildContext context, int val, Widget? child) {
            return Scaffold(
              key: Key('homepage'),
              extendBody: true,
              body: Center(
                child: [
                  HomePageContent(
                    viewModel: _homePageContentViewModel,
                  ),
...
